Added odbicia endpoint, changed id pracownika from int to string, small fix in db_manager
