# swagger_server/models/__init__.py
@@ -7,8 +7,10 @@ from swagger_server.models.admin_login_body import AdminLoginBody
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.inline_response2001 import InlineResponse2001
 from swagger_server.models.inline_response2002 import InlineResponse2002
+from swagger_server.models.inline_response2002_pracownicy import InlineResponse2002Pracownicy
 from swagger_server.models.inline_response2003 import InlineResponse2003
 from swagger_server.models.inline_response2004 import InlineResponse2004
+from swagger_server.models.inline_response2004_strefy_dostepu import InlineResponse2004StrefyDostepu
 from swagger_server.models.inline_response2005 import InlineResponse2005
 from swagger_server.models.inline_response201 import InlineResponse201
 from swagger_server.models.inline_response400 import InlineResponse400
